  * upgrade the PUSettings of the RenderingEngine extension point to the new framework (including the use of YAML to persist them)
  * implemented support for email verification during the user registration procedure
  * allowed administrator to activate a new registered user through a link sent via email
  * added Scottish Gaelic and Welsh to the system languages

version 9.1
date: 28/04/2021
  * added support for "no language tagged" labels in rendering engine
  * made the rendering of decomp:Component, ontolex:LexicalEntry, ontolex:Form and skosxl:Label independent of the choice
    of languages for rendering
  * made the LexicographerView only contain outgoing lexico-semantic relationships
  * sped up the lexicographer view on Ontotext GraphDB
  * fixed bug in the lexicographer that prevented the rendering of reified definitions modeled using the Global WordNet
    Association ontology
  * fixed IndexOutBoundException thrown by the history tab in projects with validation enabled
  * fixed issue in validation that loses null-valued operation parameters inside the history
  * fixed NullPointerException in CODAURIGenerator
  * fixed bug in NativeTemplateBasedURIGenerator that ignores the configured templates
  * fixed bug in operations within the service class Project causing losing the configuration type when updating bound
    components (e.g. URI Generators and Rendering Engines)

version 9.0
date: 17/03/2021
  * added support for internationalization (i18n)
    - added localization (l10n) for italian
  * introduced project facets
  * added project's facets to the global Lucene index (using it for global search)  
  * introduced multiple graph management
  * introduced the lexicographer view for streamlined editing of OntoLex-Lemon lexicons  
  * added support for the Freedcamp collaboration system
  * in the collaboration system it is now possible to remove a resource from an issue