@@ -4,6 +4,7 @@ date: dd/mm/yyyy
   * upgrade the PUSettings of the RenderingEngine extension point to the new framework (including the use of YAML to persist them)
   * implemented support for email verification during the user registration procedure
   * allowed administrator to activate a new registered user through a link sent via email
+  * allowed administrator to enable remote provisioning of CODA components
   * added Scottish Gaelic and Welsh to the system languages
 
 version 9.1
